bank-vaults/Manifests/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: 
    cert-manager.io/cluster-issuer: "letsencrypt-cm"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/server-snippet: "proxy_ssl_verify off;"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "false"
  name: bvault
  namespace: bankvault
spec:
  ingressClassName: nginx
  rules:
  - host: bvault.infra.companyservices.net
    http:
      paths:
      - backend:
          service:
            name: vault-0
            port:
              number: 8200
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - bvault.infra.companyservices.net
    secretName: letsencrypt-bvault
